--- a/checklist/analysis.ipynb
+++ b/checklist/analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 150,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 151,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 152,
    "metadata": {},
    "outputs": [
     {
@@ -49,7 +49,7 @@
        " 'loadedtest_babe_base.csv']"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 152,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 153,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 154,
    "metadata": {},
    "outputs": [
     {
@@ -106,25 +106,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 155,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['Nothing in particular happens if you give a man enough rope',\n",
-       " 'People would disagree on the most interesting man in the world',\n",
-       " 'If a lawsuit is frivolous, it lacks a legal argument',\n",
-       " 'What do we call the good guy in a movie? The good guy in a movie is called the hero.',\n",
-       " 'What happens to Pinocchio when he tells a lie? His nose grows longer.',\n",
-       " 'Nothing happens if a shoemaker leaves unfinished shoes out overnight',\n",
-       " 'You should avoid putting anything in their mouth',\n",
-       " \"What is responsibility? Doing what you're supposed to do and taking care of things that are important\",\n",
-       " 'There is no place that has rain literally all the time',\n",
-       " 'Yes, duck quacks echo']"
+       "['What do we call a plant that grows where it is not wanted? Weed.',\n",
+       " 'There is no place where it never stops snowing',\n",
+       " 'Nothing in particular happens if you wear a hat made out of tin foil',\n",
+       " 'Yes, duck quacks echo',\n",
+       " 'People would disagree about the best beer in the world',\n",
+       " 'J. B. Rhine attemped to prove the existence of ESP, but his methodology was flawed',\n",
+       " 'Can animals dance like people? No, animals can’t dance like people.',\n",
+       " 'No, there are no carpets that can fly',\n",
+       " \"British people don't have bad teeth\",\n",
+       " 'What do we put on to dress up fancy? Fancy clothes and shoes.']"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 155,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 156,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -161,26 +161,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 159,
    "metadata": {},
    "outputs": [],
    "source": [
     "babe = babe[babe['text_orig']!=babe['text_loaded']]\n",
-    "magpie = magpie[magpie['text_orig']!=magpie['text_loaded']]"
+    "magpie = magpie[magpie['text_orig']!=magpie['text_loaded']]\n",
+    "synth = synth[synth['text_orig']!=synth['text_loaded']]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 160,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.41604010025062654\n",
-      "0.6876923076923077\n",
-      "0.6651595744680852\n"
+      "0.412531328320802\n",
+      "0.6838461538461539\n",
+      "0.6644385026737968\n"
      ]
     }
    ],
@@ -199,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 170,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -210,16 +211,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 171,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.9823788546255506\n",
-      "0.9856502242152466\n",
-      "0.9749445676274945\n"
+      "0.9837004405286344\n",
+      "0.9860986547085202\n",
+      "0.9713968957871397\n"
      ]
     }
    ],
@@ -238,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 172,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -249,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 173,
    "metadata": {},
    "outputs": [
     {
@@ -270,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 174,
    "metadata": {},
    "outputs": [
     {
@@ -279,7 +280,7 @@
        "'They has been teaching a course on terrorism and insurgency at it in Pittsburgh for four years, and much more of his class these days is devoted to white supremacy than in the past.'"
       ]
      },
-     "execution_count": 145,
+     "execution_count": 174,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -290,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 175,
    "metadata": {},
    "outputs": [
     {
@@ -299,7 +300,7 @@
        "'Colin P. Clarke has been teaching a course on terrorism and insurgency at Carnegie Mellon University in Pittsburgh for four years, and much more of his class these days is devoted to white supremacy than in the past.'"
       ]
      },
-     "execution_count": 149,
+     "execution_count": 175,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -317,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 176,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -328,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 177,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -339,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 178,
    "metadata": {},
    "outputs": [
     {
@@ -360,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 179,
    "metadata": {},
    "outputs": [
     {
