--- a/benchmark/model_eval/gpt-4-1106-preview.ipynb
+++ b/benchmark/model_eval/gpt-4-1106-preview.ipynb
@@ -565,7 +565,7 @@
      "traceback": [
       "\u001b[1;31mRunning cells with 'Python 3.11.1 64-bit ('3.11.1')' requires ipykernel package.\n",
       "\u001b[1;31mRun the following command to install 'ipykernel' into the Python environment. \n",
-      "\u001b[1;31mCommand: '/home/sinix/.pyenv/versions/3.11.1/bin/python -m pip install ipykernel -U --force-reinstall'"
+      "\u001b[1;31mCommand: '/homeanonymous.pyenv/versions/3.11.1/bin/python -m pip install ipykernel -U --force-reinstall'"
      ]
     }
    ],
@@ -587,7 +587,7 @@
      "traceback": [
       "\u001b[1;31mRunning cells with 'Python 3.11.1 64-bit ('3.11.1')' requires ipykernel package.\n",
       "\u001b[1;31mRun the following command to install 'ipykernel' into the Python environment. \n",
-      "\u001b[1;31mCommand: '/home/sinix/.pyenv/versions/3.11.1/bin/python -m pip install ipykernel -U --force-reinstall'"
+      "\u001b[1;31mCommand: '/homeanonymous.pyenv/versions/3.11.1/bin/python -m pip install ipykernel -U --force-reinstall'"
      ]
     }
    ],
@@ -618,7 +618,7 @@
      "traceback": [
       "\u001b[1;31mRunning cells with 'Python 3.11.1 64-bit ('3.11.1')' requires ipykernel package.\n",
       "\u001b[1;31mRun the following command to install 'ipykernel' into the Python environment. \n",
-      "\u001b[1;31mCommand: '/home/sinix/.pyenv/versions/3.11.1/bin/python -m pip install ipykernel -U --force-reinstall'"
+      "\u001b[1;31mCommand: '/homeanonymous.pyenv/versions/3.11.1/bin/python -m pip install ipykernel -U --force-reinstall'"
      ]
     }
    ],
@@ -3719,7 +3719,7 @@
      "traceback": [
       "\u001b[1;31mRunning cells with 'Python 3.11.1 64-bit ('3.11.1')' requires ipykernel package.\n",
       "\u001b[1;31mRun the following command to install 'ipykernel' into the Python environment. \n",
-      "\u001b[1;31mCommand: '/home/sinix/.pyenv/versions/3.11.1/bin/python -m pip install ipykernel -U --force-reinstall'"
+      "\u001b[1;31mCommand: '/homeanonymous.pyenv/versions/3.11.1/bin/python -m pip install ipykernel -U --force-reinstall'"
      ]
     }
    ],
@@ -3792,7 +3792,7 @@
      "traceback": [
       "\u001b[1;31mRunning cells with 'Python 3.11.1 64-bit ('3.11.1')' requires ipykernel package.\n",
       "\u001b[1;31mRun the following command to install 'ipykernel' into the Python environment. \n",
-      "\u001b[1;31mCommand: '/home/sinix/.pyenv/versions/3.11.1/bin/python -m pip install ipykernel -U --force-reinstall'"
+      "\u001b[1;31mCommand: '/homeanonymous.pyenv/versions/3.11.1/bin/python -m pip install ipykernel -U --force-reinstall'"
      ]
     }
    ],
@@ -3838,7 +3838,7 @@
      "traceback": [
       "\u001b[1;31mRunning cells with 'Python 3.11.1 64-bit ('3.11.1')' requires ipykernel package.\n",
       "\u001b[1;31mRun the following command to install 'ipykernel' into the Python environment. \n",
-      "\u001b[1;31mCommand: '/home/sinix/.pyenv/versions/3.11.1/bin/python -m pip install ipykernel -U --force-reinstall'"
+      "\u001b[1;31mCommand: '/homeanonymous.pyenv/versions/3.11.1/bin/python -m pip install ipykernel -U --force-reinstall'"
      ]
     }
    ],
@@ -3861,7 +3861,7 @@
      "traceback": [
       "\u001b[1;31mRunning cells with 'Python 3.11.1 64-bit ('3.11.1')' requires ipykernel package.\n",
       "\u001b[1;31mRun the following command to install 'ipykernel' into the Python environment. \n",
-      "\u001b[1;31mCommand: '/home/sinix/.pyenv/versions/3.11.1/bin/python -m pip install ipykernel -U --force-reinstall'"
+      "\u001b[1;31mCommand: '/homeanonymous.pyenv/versions/3.11.1/bin/python -m pip install ipykernel -U --force-reinstall'"
      ]
     }
    ],
@@ -3908,7 +3908,7 @@
      "traceback": [
       "\u001b[1;31mRunning cells with 'Python 3.11.1 64-bit ('3.11.1')' requires ipykernel package.\n",
       "\u001b[1;31mRun the following command to install 'ipykernel' into the Python environment. \n",
-      "\u001b[1;31mCommand: '/home/sinix/.pyenv/versions/3.11.1/bin/python -m pip install ipykernel -U --force-reinstall'"
+      "\u001b[1;31mCommand: '/homeanonymous.pyenv/versions/3.11.1/bin/python -m pip install ipykernel -U --force-reinstall'"
      ]
     }
    ],
