--- a/benchmark/model_eval/gpt_3_5_turbo.ipynb
+++ b/benchmark/model_eval/gpt_3_5_turbo.ipynb
@@ -201,7 +201,7 @@
     "eight_shot = pd.read_csv(f\"../8-shot/data/{model}.csv\")\n",
     "\n",
     "two_shot_cot = pd.read_csv(f\"../2-shot-CoT/data/{model}.csv\")\n",
-    "four_shot_cot = pd.read_csv('/home/sinix/PycharmProjects/Annomatic_Benchmark/4-shot-CoT/data/gpt-3.5-turbo.csv')\n",
+    "four_shot_cot = pd.read_csv('/homeanonymousPycharmProjects/Annomatic_Benchmark/4-shot-CoT/data/gpt-3.5-turbo.csv')\n",
     "eight_shot_cot = pd.read_csv(f\"../8-shot-CoT/data/{model}.csv\")\n",
     "\n",
     "#load pool\n",
@@ -3512,7 +3512,7 @@
      "traceback": [
       "\u001b[1;31mRunning cells with 'Python 3.11.1 64-bit ('3.11.1')' requires ipykernel package.\n",
       "\u001b[1;31mRun the following command to install 'ipykernel' into the Python environment. \n",
-      "\u001b[1;31mCommand: '/home/sinix/.pyenv/versions/3.11.1/bin/python -m pip install ipykernel -U --force-reinstall'"
+      "\u001b[1;31mCommand: '/homeanonymous.pyenv/versions/3.11.1/bin/python -m pip install ipykernel -U --force-reinstall'"
      ]
     }
    ],
